sponsored section added

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       <input type="search" placeholder="Search" class="nav-item nav-link border-right" href="#" />
     </nav>
   </header>
+
   <main>
     <div class="container-fluid">
       <div class="row">
@@ -100,7 +101,7 @@
             Newsweek's newsroom will fall silent for 100 seconds. We invite you to join us.</p>
         </article>
 
-        <section class="col-12 col-md-6 my-2 my-md-0 order-md-4 heroes">
+        <section class="heroes col-12 col-md-6 my-2 my-md-0 order-md-4">
           <h2>Heroes of the Pandemic</h2>
           <div class="row row-cols-3">
             <figure class="col-md-4 px-md-1 mb-md-4">
@@ -130,7 +131,7 @@
           </div>
         </section>
 
-        <section class="col-12 my-2 debate">
+        <section class="debate col-12 my-2 ">
           <h2 class="pt-3">THE DEBATE</h2>
 
           <div class="capitalism d-flex mx-2">
@@ -153,7 +154,7 @@
 
         <section class="opinion col-12 my-2">
           <h2 class="pt-3">opinion</h2>
-          <div class="opinion-section d-flex">
+          <div class="opinion-section pb-2 d-flex">
             <div>
               <img src="assets/images/capitalism.webp" alt="">
             </div>
@@ -162,7 +163,7 @@
               <span>BY ABDUL EL-SAYED</span>
             </div>
           </div>
-          <div class="opinion-section mt-2 d-flex">
+          <div class="opinion-section pb-2 mt-2 d-flex">
             <div>
               <img src="assets/images/capitalism.webp" alt="">
             </div>
@@ -171,7 +172,7 @@
               <span>BY ABDUL EL-SAYED</span>
             </div>
           </div>
-          <div class="opinion-section mt-2 d-flex">
+          <div class="opinion-section pb-2 mt-2 d-flex">
             <div>
               <img src="assets/images/capitalism.webp" alt="">
             </div>
@@ -180,7 +181,7 @@
               <span>BY ABDUL EL-SAYED</span>
             </div>
           </div>
-          <div class="opinion-section mt-2 d-flex">
+          <div class="opinion-section pb-2 mt-2 d-flex">
             <div>
               <img src="assets/images/capitalism.webp" alt="">
             </div>
@@ -189,7 +190,7 @@
               <span>BY ABDUL EL-SAYED</span>
             </div>
           </div>
-          <div class="opinion-section mt-2 d-flex">
+          <div class="opinion-section pb-2 mt-2 d-flex">
             <div>
               <img src="assets/images/capitalism.webp" alt="">
             </div>
@@ -198,7 +199,7 @@
               <span>BY ABDUL EL-SAYED</span>
             </div>
           </div>
-          <div class="opinion-section mt-2 d-flex">
+          <div class="opinion-section pb-2 mt-2 d-flex">
             <div>
               <img src="assets/images/capitalism.webp" alt="">
             </div>
@@ -208,6 +209,85 @@
             </div>
           </div>
         </section>
+
+        <section class="sponsored col-12 my-2">
+          <div class="py-4">
+            <div>
+              <img src="assets/images/roborock-h6.jpg" alt="">
+            </div>
+            <div class="px-3 border">
+              <p>Looking for a Powerful, Lightweight and Long-lasting Cordless Vacuum?</p>
+              <span>
+                Roborock H6, 2020 Red Dot Award Winner, Ultra-Long lasting LiPo battery, available now on
+                Amazon.
+              </span>
+            </div>
+          </div>
+
+          <div class="py-4">
+            <div>
+              <img src="assets/images/roborock-h6.jpg" alt="">
+            </div>
+            <div class="px-3 border">
+              <p>Looking for a Powerful, Lightweight and Long-lasting Cordless Vacuum?</p>
+              <span>
+                Roborock H6, 2020 Red Dot Award Winner, Ultra-Long lasting LiPo battery, available now on
+                Amazon.
+              </span>
+            </div>
+          </div>
+
+          <div class="py-4">
+            <div>
+              <img src="assets/images/roborock-h6.jpg" alt="">
+            </div>
+            <div class="px-3 border">
+              <p>Looking for a Powerful, Lightweight and Long-lasting Cordless Vacuum?</p>
+              <span>
+                Roborock H6, 2020 Red Dot Award Winner, Ultra-Long lasting LiPo battery, available now on
+                Amazon.
+              </span>
+            </div>
+          </div>
+
+          <div class="py-4">
+            <div>
+              <img src="assets/images/roborock-h6.jpg" alt="">
+            </div>
+            <div class="px-3 border">
+              <p>Looking for a Powerful, Lightweight and Long-lasting Cordless Vacuum?</p>
+              <span>
+                Roborock H6, 2020 Red Dot Award Winner, Ultra-Long lasting LiPo battery, available now on
+                Amazon.
+              </span>
+            </div>
+          </div>
+
+          <div class="py-4">
+            <div>
+              <img src="assets/images/roborock-h6.jpg" alt="">
+            </div>
+            <div class="px-3 border">
+              <p>Looking for a Powerful, Lightweight and Long-lasting Cordless Vacuum?</p>
+              <span>
+                Roborock H6, 2020 Red Dot Award Winner, Ultra-Long lasting LiPo battery, available now on
+                Amazon.
+              </span>
+            </div>
+          </div>
+        </section>
+
+        <section class="more-stories col-12">
+          <h2>More Stories</h2>
+          <div>
+            <div>
+              <img src="assets/images/donald-trump.jpg" alt="">
+            </div>
+
+          </div>
+
+        </section>
+
 
 
 
