top stories created

--- a/index.html
+++ b/index.html
@@ -277,13 +277,117 @@
           </div>
         </section>
 
-        <section class="more-stories col-12">
+        <section class="more-stories col-12 my-2 pt-3">
           <h2>More Stories</h2>
-          <div>
+          <div class="d-flex border-top pt-3">
             <div>
               <img src="assets/images/donald-trump.jpg" alt="">
             </div>
-
+            <div class="text pl-3">
+              <h3>Trump to Issue Social Media Order After Twitter Fact-Checks Tweets</h3>
+              <p>President Donald Trump will unveil an executive order Thursday targeting social media giants after
+                Twitter added a fact-check warning to his tweets.</p>
+            </div>
+          </div>
+          <div class="d-flex border-top pt-3">
+            <div>
+              <img src="assets/images/donald-trump.jpg" alt="">
+            </div>
+            <div class="text pl-3">
+              <h3>Trump to Issue Social Media Order After Twitter Fact-Checks Tweets</h3>
+              <p>President Donald Trump will unveil an executive order Thursday targeting social media giants after
+                Twitter added a fact-check warning to his tweets.</p>
+            </div>
+          </div>
+          <div class="d-flex border-top pt-3">
+            <div>
+              <img src="assets/images/donald-trump.jpg" alt="">
+            </div>
+            <div class="text pl-3">
+              <h3>Trump to Issue Social Media Order After Twitter Fact-Checks Tweets</h3>
+              <p>President Donald Trump will unveil an executive order Thursday targeting social media giants after
+                Twitter added a fact-check warning to his tweets.</p>
+            </div>
+          </div>
+          <div class="d-flex border-top pt-3">
+            <div>
+              <img src="assets/images/donald-trump.jpg" alt="">
+            </div>
+            <div class="text pl-3">
+              <h3>Trump to Issue Social Media Order After Twitter Fact-Checks Tweets</h3>
+              <p>President Donald Trump will unveil an executive order Thursday targeting social media giants after
+                Twitter added a fact-check warning to his tweets.</p>
+            </div>
+          </div>
+          <div class="d-flex border-top pt-3">
+            <div>
+              <img src="assets/images/donald-trump.jpg" alt="">
+            </div>
+            <div class="text pl-3">
+              <h3>Trump to Issue Social Media Order After Twitter Fact-Checks Tweets</h3>
+              <p>President Donald Trump will unveil an executive order Thursday targeting social media giants after
+                Twitter added a fact-check warning to his tweets.</p>
+            </div>
+          </div>
+          <div class="d-flex border-top pt-3">
+            <div>
+              <img src="assets/images/donald-trump.jpg" alt="">
+            </div>
+            <div class="text pl-3">
+              <h3>Trump to Issue Social Media Order After Twitter Fact-Checks Tweets</h3>
+              <p>President Donald Trump will unveil an executive order Thursday targeting social media giants after
+                Twitter added a fact-check warning to his tweets.</p>
+            </div>
+          </div>
+          <div class="d-flex border-top pt-3">
+            <div>
+              <img src="assets/images/donald-trump.jpg" alt="">
+            </div>
+            <div class="text pl-3">
+              <h3>Trump to Issue Social Media Order After Twitter Fact-Checks Tweets</h3>
+              <p>President Donald Trump will unveil an executive order Thursday targeting social media giants after
+                Twitter added a fact-check warning to his tweets.</p>
+            </div>
+          </div>
+          <div class="d-flex border-top pt-3">
+            <div>
+              <img src="assets/images/donald-trump.jpg" alt="">
+            </div>
+            <div class="text pl-3">
+              <h3>Trump to Issue Social Media Order After Twitter Fact-Checks Tweets</h3>
+              <p>President Donald Trump will unveil an executive order Thursday targeting social media giants after
+                Twitter added a fact-check warning to his tweets.</p>
+            </div>
+          </div>
+          <div class="d-flex border-top pt-3">
+            <div>
+              <img src="assets/images/donald-trump.jpg" alt="">
+            </div>
+            <div class="text pl-3">
+              <h3>Trump to Issue Social Media Order After Twitter Fact-Checks Tweets</h3>
+              <p>President Donald Trump will unveil an executive order Thursday targeting social media giants after
+                Twitter added a fact-check warning to his tweets.</p>
+            </div>
+          </div>
+          <div class="d-flex border-top pt-3">
+            <div>
+              <img src="assets/images/donald-trump.jpg" alt="">
+            </div>
+            <div class="text pl-3">
+              <h3>Trump to Issue Social Media Order After Twitter Fact-Checks Tweets</h3>
+              <p>President Donald Trump will unveil an executive order Thursday targeting social media giants after
+                Twitter added a fact-check warning to his tweets.</p>
+            </div>
+          </div>
+          <div class="d-flex border-top pt-3">
+            <div>
+              <img src="assets/images/donald-trump.jpg" alt="">
+            </div>
+            <div class="text pl-3">
+              <h3>Trump to Issue Social Media Order After Twitter Fact-Checks Tweets</h3>
+              <p>President Donald Trump will unveil an executive order Thursday targeting social media giants after
+                Twitter added a fact-check warning to his tweets.</p>
+            </div>
           </div>
 
         </section>
