sign-up and sponsored2 sections added

--- a/index.html
+++ b/index.html
@@ -101,37 +101,7 @@
             Newsweek's newsroom will fall silent for 100 seconds. We invite you to join us.</p>
         </article>
 
-        <section class="heroes col-12 col-md-6 my-2 my-md-0 order-md-4">
-          <h2>Heroes of the Pandemic</h2>
-          <div class="row row-cols-3">
-            <figure class="col-md-4 px-md-1 mb-md-4">
-              <img class="img-fluid" src="assets/images/isaac.jpg" alt="isaac">
-              <figcaption>The Doctors and Nurses Crossing the Border Daily to Help Asylum Seekers</figcaption>
-            </figure>
-            <figure class="col-md-4 px-md-1">
-              <img class="img-fluid" src="assets/images/isaac.jpg" alt="isaac">
-              <figcaption>The Doctors and Nurses Crossing the Border Daily to Help Asylum Seekers</figcaption>
-            </figure>
-            <figure class="col-md-4 px-md-1">
-              <img class="img-fluid" src="assets/images/isaac.jpg" alt="isaac">
-              <figcaption>The Doctors and Nurses Crossing the Border Daily to Help Asylum Seekers</figcaption>
-            </figure>
-            <figure class="col-md-4 px-md-1">
-              <img class="img-fluid" src="assets/images/isaac.jpg" alt="isaac">
-              <figcaption>The Doctors and Nurses Crossing the Border Daily to Help Asylum Seekers</figcaption>
-            </figure>
-            <figure class="col-md-4 px-md-1">
-              <img class="img-fluid" src="assets/images/isaac.jpg" alt="isaac">
-              <figcaption>The Doctors and Nurses Crossing the Border Daily to Help Asylum Seekers</figcaption>
-            </figure>
-            <figure class="col-md-4 px-md-1">
-              <img class="img-fluid" src="assets/images/isaac.jpg" alt="isaac">
-              <figcaption>The Doctors and Nurses Crossing the Border Daily to Help Asylum Seekers</figcaption>
-            </figure>
-          </div>
-        </section>
-
-        <section class="debate col-12 my-2 ">
+        <section class="debate col-sm-12 my-2 order-md-20">
           <h2 class="pt-3">THE DEBATE</h2>
 
           <div class="capitalism d-flex mx-2">
@@ -152,7 +122,7 @@
           </div>
         </section>
 
-        <section class="opinion col-12 my-2">
+        <section class="opinion col-sm-12 my-2 order-md-20">
           <h2 class="pt-3">opinion</h2>
           <div class="opinion-section pb-2 d-flex">
             <div>
@@ -210,7 +180,7 @@
           </div>
         </section>
 
-        <section class="sponsored col-12 my-2">
+        <section class="sponsored col-sm-12 my-2 order-md-20">
           <div class="py-4">
             <div>
               <img src="assets/images/roborock-h6.jpg" alt="">
@@ -277,7 +247,7 @@
           </div>
         </section>
 
-        <section class="more-stories col-12 my-2 pt-3">
+        <section class="more-stories col-sm-12 my-2 pt-3 order-md-2-=0">
           <h2>More Stories</h2>
           <div class="d-flex border-top pt-3">
             <div>
@@ -391,6 +361,112 @@
           </div>
 
         </section>
+
+        <section class="heroes col-sm-12 col-md-6 my-2 my-md-0 order-md-4 order-md-20">
+          <h2 class="pt-3">Heroes of the Pandemic</h2>
+          <div class="row row-cols-3">
+            <figure class="col-12 col-md-4 px-md-1 mb-md-4">
+              <img class="img-fluid" src="assets/images/isaac.jpg" alt="isaac">
+              <figcaption class="pt-3">The Doctors and Nurses Crossing the Border Daily to Help Asylum Seekers
+              </figcaption>
+            </figure>
+            <figure class="col-12 col-md-4 px-md-1">
+              <img class="img-fluid" src="assets/images/isaac.jpg" alt="isaac">
+              <figcaption class="pt-3">The Doctors and Nurses Crossing the Border Daily to Help Asylum Seekers
+              </figcaption>
+            </figure>
+            <figure class="col-12 col-md-4 px-md-1">
+              <img class="img-fluid" src="assets/images/isaac.jpg" alt="isaac">
+              <figcaption class="pt-3">The Doctors and Nurses Crossing the Border Daily to Help Asylum Seekers
+              </figcaption>
+            </figure>
+            <figure class="col-12 col-md-4 px-md-1">
+              <img class="img-fluid" src="assets/images/isaac.jpg" alt="isaac">
+              <figcaption class="pt-3">The Doctors and Nurses Crossing the Border Daily to Help Asylum Seekers
+              </figcaption>
+            </figure>
+            <figure class="col-12 col-md-4 px-md-1">
+              <img class="img-fluid" src="assets/images/isaac.jpg" alt="isaac">
+              <figcaption class="pt-3">The Doctors and Nurses Crossing the Border Daily to Help Asylum Seekers
+              </figcaption>
+            </figure>
+            <figure class="col-12 col-md-4 px-md-1">
+              <img class="img-fluid" src="assets/images/isaac.jpg" alt="isaac">
+              <figcaption class="pt-3">The Doctors and Nurses Crossing the Border Daily to Help Asylum Seekers
+              </figcaption>
+            </figure>
+          </div>
+        </section>
+
+        <section class="col-sm-12 my-3 sign py-4 order-md-20">
+          <div class="row justify-content-center">
+            <div class="sign-up col-6 p-4 border">
+              <div class="d-flex">
+                <img src="assets/images/n-icon.png" alt="">
+                <p>START YOUR DAY WITH OUR TOP 5 ARTICLES</p>
+              </div>
+              <form action="">
+                <input type="email" name="email" id="email" placeholder="Email address">
+                <input class="btn btn-danger" type="submit" value="FREE SIGN UP">
+              </form>
+            </div>
+          </div>
+        </section>
+
+        <section class="sponsored col-sm-12 my-2 order-md-20">
+          <div class="py-4">
+            <div>
+              <img src="assets/images/roborock-h6.jpg" alt="">
+            </div>
+            <div class="px-3 border">
+              <p>Looking for a Powerful, Lightweight and Long-lasting Cordless Vacuum?</p>
+              <span>
+                Roborock H6, 2020 Red Dot Award Winner, Ultra-Long lasting LiPo battery, available now on
+                Amazon.
+              </span>
+            </div>
+          </div>
+
+          <div class="py-4">
+            <div>
+              <img src="assets/images/roborock-h6.jpg" alt="">
+            </div>
+            <div class="px-3 border">
+              <p>Looking for a Powerful, Lightweight and Long-lasting Cordless Vacuum?</p>
+              <span>
+                Roborock H6, 2020 Red Dot Award Winner, Ultra-Long lasting LiPo battery, available now on
+                Amazon.
+              </span>
+            </div>
+          </div>
+
+          <div class="py-4">
+            <div>
+              <img src="assets/images/roborock-h6.jpg" alt="">
+            </div>
+            <div class="px-3 border">
+              <p>Looking for a Powerful, Lightweight and Long-lasting Cordless Vacuum?</p>
+              <span>
+                Roborock H6, 2020 Red Dot Award Winner, Ultra-Long lasting LiPo battery, available now on
+                Amazon.
+              </span>
+            </div>
+          </div>
+
+          <div class="py-4">
+            <div>
+              <img src="assets/images/roborock-h6.jpg" alt="">
+            </div>
+            <div class="px-3 border">
+              <p>Looking for a Powerful, Lightweight and Long-lasting Cordless Vacuum?</p>
+              <span>
+                Roborock H6, 2020 Red Dot Award Winner, Ultra-Long lasting LiPo battery, available now on
+                Amazon.
+              </span>
+            </div>
+          </div>
+        </section>
+
 
 
 
