Magazine and editors section created

--- a/index.html
+++ b/index.html
@@ -61,47 +61,47 @@
 
   <main>
     <div class="container-fluid">
-      <div class="row">
-        <article class="col-sm-12 col-md-6 my-sm-3 my-md-0 order-md-2">
+      <div class="row justify-content-center">
+        <article class="col-sm-12 col-md-7 my-sm-3 my-md-0 order-md-2">
           <h2 class="pt-sm-3">Top Story</h2>
           <img class="img-fluid" src="assets/images/dr-anthony-fauci-white-house-april-2020.jpg" alt="first story">
           <h3>100 Seconds of Silence to Commemorate 100,000 Dead</h3>
           <p>The coronavirus pandemic has now cost 100,000 American lives. To mark the heartbreaking milestone,
             Newsweek's newsroom will fall silent for 100 seconds. We invite you to join us.</p>
         </article>
-        <article class="col-sm-12 col-md-6 my-sm-3 my-md-0 order-md-1">
+        <article class="col-sm-12 col-md-5 my-sm-3 my-md-0 order-md-1">
           <h2 class=" pt-sm-3">Featured Stories</h2>
           <img class="img-fluid" src="assets/images/dr-anthony-fauci-white-house-april-2020.jpg" alt="first story">
           <h3>100 Seconds of Silence to Commemorate 100,000 Dead</h3>
           <p>The coronavirus pandemic has now cost 100,000 American lives. To mark the heartbreaking milestone,
             Newsweek's newsroom will fall silent for 100 seconds. We invite you to join us.</p>
         </article>
-        <article class="col-sm-12 col-md-6 my-sm-3 my-md-0 order-md-3">
+        <article class="col-sm-12 col-md-5 my-sm-3 my-md-0 order-md-3">
           <img class="img-fluid" src="assets/images/dr-anthony-fauci-white-house-april-2020.jpg" alt="first story">
           <h3>100 Seconds of Silence to Commemorate 100,000 Dead</h3>
           <p>The coronavirus pandemic has now cost 100,000 American lives. To mark the heartbreaking milestone,
             Newsweek's newsroom will fall silent for 100 seconds. We invite you to join us.</p>
         </article>
-        <article class="col-sm-12 col-md-6 my-sm-3 my-md-0 order-md-6">
+        <article class="col-sm-12 col-md-5 my-sm-3 my-md-0 order-md-5">
           <img class="img-fluid" src="assets/images/dr-anthony-fauci-white-house-april-2020.jpg" alt="first story">
           <h3>100 Seconds of Silence to Commemorate 100,000 Dead</h3>
           <p>The coronavirus pandemic has now cost 100,000 American lives. To mark the heartbreaking milestone,
             Newsweek's newsroom will fall silent for 100 seconds. We invite you to join us.</p>
         </article>
-        <article class="col-sm-12 col-md-6 my-sm-3 my-md-0 order-md-6">
+        <article class="col-sm-12 col-md-5 my-sm-3 my-md-0 order-md-7">
           <img class="img-fluid" src="assets/images/dr-anthony-fauci-white-house-april-2020.jpg" alt="first story">
           <h3>100 Seconds of Silence to Commemorate 100,000 Dead</h3>
           <p>The coronavirus pandemic has now cost 100,000 American lives. To mark the heartbreaking milestone,
             Newsweek's newsroom will fall silent for 100 seconds. We invite you to join us.</p>
         </article>
-        <article class="col-sm-12 col-md-6 my-sm-3 my-md-0 order-md-6">
+        <article class="col-sm-12 col-md-5 my-sm-3 my-md-0 order-md-8">
           <img class="img-fluid" src="assets/images/dr-anthony-fauci-white-house-april-2020.jpg" alt="first story">
           <h3>100 Seconds of Silence to Commemorate 100,000 Dead</h3>
           <p>The coronavirus pandemic has now cost 100,000 American lives. To mark the heartbreaking milestone,
             Newsweek's newsroom will fall silent for 100 seconds. We invite you to join us.</p>
         </article>
 
-        <section class="debate col-sm-12 my-2 order-md-20">
+        <section class="debate col-sm-12 col-md-12my-2 order-md-10">
           <h2 class="pt-3">THE DEBATE</h2>
 
           <div class="capitalism d-flex mx-2">
@@ -122,7 +122,7 @@
           </div>
         </section>
 
-        <section class="opinion col-sm-12 my-2 order-md-20">
+        <section class="opinion col-sm-12 my-2 col-md-12 order-md-11">
           <h2 class="pt-3">opinion</h2>
           <div class="opinion-section pb-2 d-flex">
             <div>
@@ -180,7 +180,7 @@
           </div>
         </section>
 
-        <section class="sponsored col-sm-12 my-2 order-md-20">
+        <section class="sponsored col-sm-12 col-md-6 my-2 order-md-9">
           <div class="py-4">
             <div>
               <img src="assets/images/roborock-h6.jpg" alt="">
@@ -247,7 +247,7 @@
           </div>
         </section>
 
-        <section class="more-stories col-sm-12 my-2 pt-3 order-md-2-=0">
+        <section class="more-stories col-sm-12 col-md-7 my-2 pt-3 order-md-6">
           <h2>More Stories</h2>
           <div class="d-flex border-top pt-3">
             <div>
@@ -362,7 +362,7 @@
 
         </section>
 
-        <section class="heroes col-sm-12 col-md-6 my-2 my-md-0 order-md-4 order-md-20">
+        <section class="heroes col-sm-12 col-md-7 my-2 my-md-0 order-md-4 order-md-4">
           <h2 class="pt-3">Heroes of the Pandemic</h2>
           <div class="row row-cols-3">
             <figure class="col-12 col-md-4 px-md-1 mb-md-4">
@@ -398,7 +398,7 @@
           </div>
         </section>
 
-        <section class="col-sm-12 my-3 sign py-4 order-md-20">
+        <section class="sign col-sm-12 my-3 col-md-7 py-4 order-md-12">
           <div class="row justify-content-center">
             <div class="sign-up col-6 p-4 border">
               <div class="d-flex">
@@ -413,7 +413,7 @@
           </div>
         </section>
 
-        <section class="sponsored col-sm-12 my-2 order-md-20">
+        <section class="sponsored col-sm-12 col-md-6 my-2 order-md-12">
           <div class="py-4">
             <div>
               <img src="assets/images/roborock-h6.jpg" alt="">
@@ -467,16 +467,130 @@
           </div>
         </section>
 
-
-
-
-
-
-
-
-
-
       </div>
+
+      <section class="magazine my-2 row">
+        <h2 class="pt-4 mx-auto"><img src="assets/images/n-icon.png" alt="n-icon">IN THE MAGAZINE</h2>
+        <div class="col-12">
+          <img class="w-100" src="assets/images/may-29-june-06-2020-cover.jpg" alt="cover">
+          <p class="pt-2 text-center">See All Features <img src="assets/images/chevron-right.svg" alt="arrow"></p>
+        </div>
+
+        <div class="col-12">
+          <img class="w-100" src="assets/images/per-bezonomics-e-palette.jpg" alt="mag">
+          <div class="p-2 font-weight-bold"><span class="bg-danger mag-cat p-1">Cover</span><span
+              class="ml-2 text-danger">News</span></div>
+          <h4>America Is in a New Cold War and This Time the Communists Might Win</h4>
+        </div>
+        <div class="col-12">
+          <img class="w-100" src="assets/images/per-bezonomics-e-palette.jpg" alt="mag">
+          <div class="p-2 font-weight-bold"><span class="bg-danger mag-cat p-1">Cover</span><span
+              class="ml-2 text-danger">News</span></div>
+          <h4>America Is in a New Cold War and This Time the Communists Might Win</h4>
+        </div>
+        <div class="col-12">
+          <img class="w-100" src="assets/images/per-bezonomics-e-palette.jpg" alt="mag">
+          <div class="p-2 font-weight-bold"><span class="bg-danger mag-cat p-1">Cover</span><span
+              class="ml-2 text-danger">News</span></div>
+          <h4>America Is in a New Cold War and This Time the Communists Might Win</h4>
+        </div>
+        <div class="col-12">
+          <img class="w-100" src="assets/images/per-bezonomics-e-palette.jpg" alt="mag">
+          <div class="p-2 font-weight-bold"><span class="bg-danger mag-cat p-1">Cover</span><span
+              class="ml-2 text-danger">News</span></div>
+          <h4>America Is in a New Cold War and This Time the Communists Might Win</h4>
+        </div>
+        <div class="col-12">
+          <img class="w-100" src="assets/images/per-bezonomics-e-palette.jpg" alt="mag">
+          <div class="p-2 font-weight-bold"><span class="bg-danger mag-cat p-1">Cover</span><span
+              class="ml-2 text-danger">News</span></div>
+          <h4>America Is in a New Cold War and This Time the Communists Might Win</h4>
+        </div>
+        <div class="col-12">
+          <img class="w-100" src="assets/images/per-bezonomics-e-palette.jpg" alt="mag">
+          <div class="p-2 font-weight-bold"><span class="bg-danger mag-cat p-1">Cover</span><span
+              class="ml-2 text-danger">News</span></div>
+          <h4>America Is in a New Cold War and This Time the Communists Might Win</h4>
+        </div>
+        <div class="col-12">
+          <img class="w-100" src="assets/images/per-bezonomics-e-palette.jpg" alt="mag">
+          <div class="p-2 font-weight-bold"><span class="bg-danger mag-cat p-1">Cover</span><span
+              class="ml-2 text-danger">News</span></div>
+          <h4>America Is in a New Cold War and This Time the Communists Might Win</h4>
+        </div>
+
+      </section>
+
+      <section class="editors-pick my-3 row">
+        <h2 class="pt-4 mx-auto"><img src="assets/images/n-icon.png" alt="n-icon">EDITOR'S PICK</h2>
+        <div class="col-12 border-top pt-4">
+          <img class="w-100" src="assets/images/us-education-secretary-betsy-devos.jpg" alt="cover">
+          <h4 class="mt-2"><a class="text-dark" href="#">U.S. Education Department Threatens Connecticut Over Trans
+              Athlete Policy</a></h4>
+          <small>Connecticut is one of 18 states that allows trans athletes to compete without restrictions alongside
+            other members of their shared gender identity.</small>
+        </div>
+        <div class="col-12 pt-4">
+          <img class="w-100" src="assets/images/us-education-secretary-betsy-devos.jpg" alt="cover">
+          <h4 class="mt-2"><a class="text-dark" href="#">U.S. Education Department Threatens Connecticut Over Trans
+              Athlete Policy</a></h4>
+          <small>Connecticut is one of 18 states that allows trans athletes to compete without restrictions alongside
+            other members of their shared gender identity.</small>
+        </div>
+        <div class="col-12 pt-4">
+          <img class="w-100" src="assets/images/us-education-secretary-betsy-devos.jpg" alt="cover">
+          <h4 class="mt-2"><a class="text-dark" href="#">U.S. Education Department Threatens Connecticut Over Trans
+              Athlete Policy</a></h4>
+          <small>Connecticut is one of 18 states that allows trans athletes to compete without restrictions alongside
+            other members of their shared gender identity.</small>
+        </div>
+        <div class="col-12 pt-4">
+          <img class="w-100" src="assets/images/us-education-secretary-betsy-devos.jpg" alt="cover">
+          <h4 class="mt-2"><a class="text-dark" href="#">U.S. Education Department Threatens Connecticut Over Trans
+              Athlete Policy</a></h4>
+          <small>Connecticut is one of 18 states that allows trans athletes to compete without restrictions alongside
+            other members of their shared gender identity.</small>
+        </div>
+        <div class="col-12 pt-4">
+          <img class="w-100" src="assets/images/us-education-secretary-betsy-devos.jpg" alt="cover">
+          <h4 class="mt-2"><a class="text-dark" href="#">U.S. Education Department Threatens Connecticut Over Trans
+              Athlete Policy</a></h4>
+          <small>Connecticut is one of 18 states that allows trans athletes to compete without restrictions alongside
+            other members of their shared gender identity.</small>
+        </div>
+        <div class="col-12 pt-4">
+          <img class="w-100" src="assets/images/us-education-secretary-betsy-devos.jpg" alt="cover">
+          <h4 class="mt-2"><a class="text-dark" href="#">U.S. Education Department Threatens Connecticut Over Trans
+              Athlete Policy</a></h4>
+          <small>Connecticut is one of 18 states that allows trans athletes to compete without restrictions alongside
+            other members of their shared gender identity.</small>
+        </div>
+        <div class="col-12 pt-4">
+          <img class="w-100" src="assets/images/us-education-secretary-betsy-devos.jpg" alt="cover">
+          <h4 class="mt-2"><a class="text-dark" href="#">U.S. Education Department Threatens Connecticut Over Trans
+              Athlete Policy</a></h4>
+          <small>Connecticut is one of 18 states that allows trans athletes to compete without restrictions alongside
+            other members of their shared gender identity.</small>
+        </div>
+        <div class="col-12 pt-4">
+          <img class="w-100" src="assets/images/us-education-secretary-betsy-devos.jpg" alt="cover">
+          <h4 class="mt-2"><a class="text-dark" href="#">U.S. Education Department Threatens Connecticut Over Trans
+              Athlete Policy</a></h4>
+          <small>Connecticut is one of 18 states that allows trans athletes to compete without restrictions alongside
+            other members of their shared gender identity.</small>
+        </div>
+
+      </section>
+
+      <section class="u-s my-2 row p-3">
+        <h2 class=>U.S.</h2>
+        <div class="col-12">
+          <img class="w-100" src="assets/images/cnn-arrest-2.png" alt="usa">
+
+        </div>
+
+
+      </section>
 
 
 
