us section added

--- a/index.html
+++ b/index.html
@@ -582,14 +582,33 @@
 
       </section>
 
-      <section class="u-s my-2 row p-3">
-        <h2 class=>U.S.</h2>
+      <section class="u-s my-2 row">
+        <h2 class="pl-3">U.S.</h2>
         <div class="col-12">
           <img class="w-100" src="assets/images/cnn-arrest-2.png" alt="usa">
-
+          <h4 class=" pt-2">Unions Condemn 'Blatant Abuse' of Police Power After CNN Reporter Arrested</h4>
         </div>
-
-
+        <div class="col-12 mt-3">
+          <img class="w-100" src="assets/images/cnn-arrest-2.png" alt="usa">
+          <h4 class=" pt-2">Unions Condemn 'Blatant Abuse' of Police Power After CNN Reporter Arrested</h4>
+        </div>
+        <div class="col-12 mt-2">
+          <div class="d-flex us-aside border-bottom">
+            <img class="col-3 px-0" src="assets/images/ben-cardin.jpg" alt="ben cardin">
+            <h4 class="col-9"><a class="text-dark" href="#">House Dems Find New Opposition to Second Round of Stimulus
+                Checks: Senate Dems</a></h4>
+          </div>
+          <div class="d-flex us-aside py-2 border-bottom">
+            <img class="col-3 px-0" src="assets/images/ben-cardin.jpg" alt="ben cardin">
+            <h4 class="col-9"><a class="text-dark" href="#">House Dems Find New Opposition to Second Round of Stimulus
+                Checks: Senate Dems</a></h4>
+          </div>
+          <div class="d-flex us-aside py-2 border-bottom">
+            <img class="col-3 px-0" src="assets/images/ben-cardin.jpg" alt="ben cardin">
+            <h4 class="col-9"><a class="text-dark" href="#">House Dems Find New Opposition to Second Round of Stimulus
+                Checks: Senate Dems</a></h4>
+          </div>
+        </div>
       </section>
 
 
